# Tarvos

./: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: CNAME  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/app/: globals.css  layout.tsx  page.js  page.tsx
src/app/components/changeKeysModal/: ChangeKeyModal.tsx
src/app/components/history/: History.tsx
src/app/components/overlay/: Overlay.tsx
src/app/components/toolbar/: Toolbar.jsx  Toolbar.tsx
src/app/event-handler/: EventDispatcher.ts  GlobalEvents.js  GlobalEvents.ts
src/app/overlay/: Overlay.jsx
src/app/toast/: ToastInner.jsx  page.jsx  page.tsx
src/app/toast/components/: Toast.tsx
src/core/: hotkeys.ts  languages.ts  ocrService.ts  toastEvents.ts  tray.ts
src/core/ocr/: ocrService.js  ocrService.ts
src/hooks/: useAppInit.ts  useCapture.ts
src/shared/components/history/: History.jsx
src/shared/components/toast/: Toast.jsx
src/shared/hooks/: showToast.js  showToast.ts  useAppInit.js  useAppInit.ts
src/shared/store/: useAppStore.js  useAppStore.ts
src/shared/utils/: hotkeys.js  showPopup.js
src/store/: useAppStore.ts
src/tray/: createTray.js  createTray.ts  trayEvents.js  trayEvents.ts
src/types/: OcrTypes.ts  index.ts  toast.ts
